--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,20 @@
-Fairhouse App is running
+<main>
+
+  <header>
+    <img src="../assets/logo.svg" alt="fairhouse" />FairHouse
+  </header>
+
+  <section>
+    <app-housing-list [locationList]="housingLocationList" (selectedLocationEvent)="updateSelectedLocation($event)">
+    </app-housing-list>
+  </section>
+  <article>
+    <ng-container *ngIf="selectedLocation">
+      <img [src]="selectedLocation?.photo" [alt]="selectedLocation?.name"/>
+      <p>{{selectedLocation?.name}}</p>
+      <p>{{selectedLocation?.city}}, {{selectedLocation?.state}}</p>
+      <p>{{selectedLocation?.wifi ? "Has wifi":"No wifi"}}</p>
+    </ng-container>
+  </article>
+
+</main>
