--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
 
   <header>
-    <img src="../assets/logo.svg" alt="fairhouse" />FairHouse
+    <img src="../assets/logo.svg" alt="fairhouse" />{{title}}
   </header>
 
   <section>
